# svc-texture

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cloudbuild.yaml  image.sh  run.sh  service.sh  svc_texture_esp.yaml  svc_texture_k8s.yaml
proto/: endpoints.bat  endpoints.sh  service.proto
schema/: generate.bat  generate.sh  svc_texture.fbs  svc_texture_generated.h  svc_texture_generated.rs
src/: error.rs  identity.rs  lib.rs  utilities.rs
src/client/: transport.rs
src/compile/: manifest.rs  mod.rs
src/process/: bcn.rs  generated.rs  manifest.rs  mips.rs  mod.rs
tests/: credits.txt  test1.toml
