[package]
name = "svc-texture"
version = "0.5.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "A gRPC micro-service that exposes a texture compression and resampling under a common cloud-based abstraction."
homepage = "https://github.com/gwihlidal/svc-texture"
repository = "https://github.com/gwihlidal/svc-texture"
readme = "README.md"
keywords = ["grpc", "texture", "compress", "gpu", "pipeline"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
hostname = "0.1"
rand = "0.6.5"
env_logger = "0.6.0"
log = "0.4.6"
regex = "1.1.0"
glob = "0.2"
notify = "4.0.7"
serde = "1.0"
serde_yaml = "0.8.8"
serde_json = "1.0"
toml = "0.4.10"
clap = "2.32"
serde_derive = "1.0.86"
lazy_static = "1.2.0"
base58 = "0.1.0"
sha2 = "0.8.0"
filebuffer = "0.4.0"
crossbeam-deque = "0.7.1"
h2 = "0.1.16"
tokio = "0.1"
tokio-connect = { git = "https://github.com/carllerche/tokio-connect" }
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
tower-http = { git = "https://github.com/tower-rs/tower-http" }
tower-util = { git = "https://github.com/tower-rs/tower" }
futures = "0.1.25"
futures-cpupool = "0.1.8"
bytes = "0.4.11"
prost = "0.4.0"
prost-derive = "0.4.0"
prost-types = "0.4.0"
failure = "0.1.5"
uuid = { version = "0.7", features = ["v4"] }
flate2 = "1.0.6"
brotli = "3.1.8"
lzma-rs = "0.1.0"
lz4 = "1.23.1"
zstd = { version="0.4.22+zstd.1.3.8", default-features = false }
bincode = "1.0.1"
dotenv = "0.13.0"
cfg-if = "0.1.6"
scoped_threadpool = "0.1.9"
chashmap = "2.2.0"
file_tree = "0.1.0"
yansi = "0.5.0"
ptree = "0.2.1"
byteorder = "1.2.1"
twox-hash = "1.1.2"
fern = "0.5.7"
chrono = "0.4.6"
structopt = "0.2"
flatbuffers = "0.5.0"
intel_tex = "0.1.4"
image = "0.21.0"
ddsfile = "0.2.3"

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }

[[bin]]
name = "client"
path = "src/bin/client/main.rs"
test = false

[[bin]]
name = "service"
path = "src/bin/service/main.rs"
test = false
